2002-07-15  Marcus Brinkmann  <marcus@gnu.org>

	* display.c: Restore copyright notice until the papers by Kalle
	are actually received.

2002-06-27  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (MIGSTUBS): Add fs_notifyUser.o.
	(MIGSFLAGS): New variable.
	* console.c: Include "fs_notify_U.h".
	(struct modreq): New structure.
	(struct cons): New members DIRMOD_REQS and DIRMOD_TICK.
	(cons_notice_dirchange): New function.
	(vcons_lookup): Call cons_notice_dirchange.
	(netfs_S_dir_notice_changes): New function.
	(main): Initialize new members in CONS.
	* display.c (nowait_file_changed): Update to new interface (new
	argument TICKNO).
	(do_mach_notify_msg_accepted): Call nowait_file_changed with new argument.
	(display_notice_changes): Likewise.
	(display_notice_filechange): Likewise.
	
2002-06-25  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (HURDLIBS): Add pager, reported by Alfred M. Szmidt.

	* display.c (screen_shift_left): Don't increase DST twice in one
	iteration.
	* display.c (screen_shift_right): Likewise.

2002-06-25  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (LCLHDRS): Add priv.h and mutations.h.
	(MIGSTUBS): Add tioctlServer.o
	* console.c: Include <hurd/ioctl-types.h>.
	(new_node): Bump up st_size for display node.
	(S_tioctl_tiocflush, S_tioctl_tiocgwinsz, S_tioctl_tiocstart,
	S_tioctl_tiocstop, S_tioctl_tiocoutq, S_tioctl_tiocspgrp,
	S_tioctl_tiocgpgrp): New functions.
	(S_tioctl_tiocmodg, S_tioctl_tiocmods, S_tioctl_tiocexcl,
	S_tioctl_tiocnxcl, S_tioctl_tiocgeta, S_tioctl_tiocseta,
	S_tioctl_tiocsetaw, S_tioctl_tiocsetaf, S_tioctl_tiocgetd,
	S_tioctl_tiocsetd, S_tioctl_tiocdrain, S_tioctl_tiocmget,
	S_tioctl_tiocmset, S_tioctl_tiocsig, S_tioctl_tiocext,
	S_tioctl_tiocswinsz, S_tioctl_tiocremote, S_tioctl_tiocmbic,
	S_tioctl_tiocmbis, S_tioctl_tiocpkt, S_tioctl_tiocsti,
	S_tioctl_tioccdtr, S_tioctl_tiocsdtr, S_tioctl_tioccbrk,
	S_tioctl_tiocsbrk): New stubs.
	(console_demuxer): New function.
	(main): Don't call netfs_server_loop, but call